--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -31,6 +31,13 @@ spec:
           name: config-volume
           subPath: spire-agent.conf
           readOnly: true
+        resources:
+          requests:
+            memory: "50Mi"
+            cpu: "50m"
+          limits:
+            memory: "1Gi"
+            cpu: "1"
       {{- end }}
       {{- if .Values.feederService.enabled }}
       - image: {{.Values.feederService.image}}
@@ -105,6 +112,13 @@ spec:
         - name: tls-volume
           mountPath: /opt/cert/encoded.pem
           subPath: encoded.pem
+        resources:
+          requests:
+            memory: "50Mi"
+            cpu: "50m"
+          limits:
+            memory: "1Gi"
+            cpu: "1"        
       {{- end }}
       {{- if .Values.sharedInformerAgent.enabled }}
       - image: {{.Values.sharedInformerAgent.image}}
@@ -126,6 +140,13 @@ spec:
         - name: tls-volume
           mountPath: /opt/cert/encoded.pem
           subPath: encoded.pem
+        resources:
+          requests:
+            memory: "50Mi"
+            cpu: "50m"
+          limits:
+            memory: "1Gi"
+            cpu: "1"          
       {{- end }}
       {{- if .Values.discover.enabled }}
       - name: discover
@@ -146,6 +167,13 @@ spec:
         - name: tls-volume
           mountPath: /opt/cert/encoded.pem
           subPath: encoded.pem
+        resources:
+          requests:
+            memory: "50Mi"
+            cpu: "50m"
+          limits:
+            memory: "1Gi"
+            cpu: "1"          
       {{- end }}
       {{- if .Values.policyEnforcementAgent.enabled }}
       - image: {{.Values.policyEnforcementAgent.image}}
@@ -172,6 +200,13 @@ spec:
           subPath: encoded.pem
         - name: cp-node-{{ .Values.clusterName  }}-policy-pvc
           mountPath: /opt/pea/policies/
+        resources:
+          requests:
+            memory: "50Mi"
+            cpu: "50m"
+          limits:
+            memory: "1Gi"
+            cpu: "1"          
       {{- end }}
       restartPolicy: Always
       volumes:
